helm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-sidecar
  labels:
    name: kafka-sidecar
